Setting long words to break onto new lines within the message modal for subject, sender, time and message body to stop overflow

--- a/src/utilities/modal/style.scss
+++ b/src/utilities/modal/style.scss
@@ -398,6 +398,11 @@ dialog {
   .message-header {
     margin-bottom: 2rem;
     padding: 0;
+    word-wrap: break-word;
+
+    > * {
+      width: 100%;
+    }
 
     .subject {
       color: $secondary-color-700;
@@ -408,5 +413,6 @@ dialog {
 
   .message-body {
     margin-bottom: 2rem;
+    word-wrap: break-word;
   }
 }
